--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,3 @@
-RewriteEngine On
-RewriteRule ^([a-z]+)$ index.php?route=$1
+RewriteEngine on
+RewriteRule ^([0-9]+)$ index.php?route=book&isbn=$1 [L]
+RewriteRule ^([a-z]+)$ index.php?route=$1 [QSA,L]
