--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
 RewriteEngine on
-RewriteRule ^([0-9]+)$ index.php?route=book&isbn=$1 [L]
+#RewriteRule ^([0-9]+)$ index.php?route=book&isbn=$1 [L]
+RewriteRule ^([a-zA-Z]+)/([0-9]+)$ index.php?route=$1&isbn=$2 [L]
 RewriteRule ^([a-z]+)$ index.php?route=$1 [QSA,L]
