--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 RewriteEngine On
 rewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^([a-zA-Z]+)/([0-9]+)$ index.php?route=$1&parameter=$2 [L]
+RewriteRule ^([a-zA-Z]+)/([a-zA-Z0-9]+)$ index.php?route=$1&parameter=$2 [L]
 RewriteRule ^([a-zA-Z]+)$ index.php?route=$1 [QSA,L]
