--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,6 @@
 RewriteEngine On
 rewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([a-zA-Z]+)/([a-zA-Z0-9]+)$ index.php?route=$1&parameter=$2 [L]
+RewriteRule ^([a-zA-Z]+)/([a-zA-Z0-9]+)/([a-zA-Z0-9]+)$ index.php?route=$1&parameter=$2&page=$3 [L]
+RewriteRule ^([a-zA-Z]+)/([a-zA-Z0-9]+)/([a-zA-Z0-9]+)/([a-zA-Z0-9]+)$ index.php?route=$1&parameter=$2&page=$3&opinionId=$4 [L]
 RewriteRule ^([a-zA-Z]+)$ index.php?route=$1 [QSA,L]
